# cortex-backend

./: .flaskenv  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  sample.env  start_admin.sh  start_frontend.sh  start_server.sh  tox.ini  wsgi.py
.github/workflows/: python-app.yml
admin/: __init__.py  config.py  database.py  run.py
admin/forms/: __init__.py  auth.py  new_doctor.py
admin/templates/: btn_logout.html  login.html  register_email.html
admin/views/: __init__.py  admin.py  auth.py  mail_message.py
app/: database.py  main.py  setup.py
app/config/: settings.py
app/models/: __init__.py  billing.py  care_plan.py  client.py  condition.py  consult.py  disease.py  doctor.py  info_care_plan.py  info_frequency.py  note.py  quene.py  queue.py  queue_member.py  reception.py  reseption.py  test.py  utils.py  visit.py
app/routers/: __init__.py  auth.py  client.py  clients_intake.py  clients_queue.py  consult.py  note.py  stripe.py  test.py  visits.py
app/schemas/: __init__.py  auth.py  base_response.py  billing.py  care_plan.py  client.py  consult.py  info_care_plan.py  info_care_plan_frequency.py  info_frequency.py  note.py  quene.py  queue_member.py  reseption.py  test.py  utils.py  visit.py
app/services/: __init__.py  auth.py  client.py  consult.py  note.py  queue.py  reports.py  stripe.py  test.py  visit.py
migrations/versions/: 188282308e9a_.py  206bd8a5995e_.py  2567a1bf9502_.py  352abb027016_.py  372998a49bca_.py  418a52507064_.py  468a144c66d6_.py  4ba8a0a05a99_.py  4d139412cd47_.py  4e64c16bb97f_.py  4f3a5a86655a_.py  54c1b548ee73_.py  588fee996f3b_.py  62893e564788_.py  64cd5d7a6b6a_.py  747f2180d382_.py  7518669397ab_.py  7a136c4cad69_.py  8a837d6ed23d_.py  9026e79eae25_.py  961ef107c238_.py  9bce84c879e2_.py  a5dc50d00b70_.py  aa4f3890b597_.py  aea2d89a6f9e_.py  (+15 more)
tests/: clients.xlsx  database.py  setup.py  setup_flask.py  test_admin_auth.py  test_auth.py  test_client.py  test_consult.py  test_database.py  test_mail_message.py  test_new_doctor.py  test_start_test.py  utils.py
