[tool.poetry]
name = "cortex"
version = "0.1.0"
description = ""
authors = ["varvarashcherbyna7 <varvarashcherbyna7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
passlib = "^1.7.4"
python-dotenv = "^0.19.0"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
