[tool.poetry]
name = "cortex"
version = "0.1.0"
description = ""
authors = ["varvarashcherbyna7 <varvarashcherbyna7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
passlib = "^1.7.4"
python-dotenv = "^0.19.0"
SQLAlchemy = "^1.4.23"
fastapi-pagination = "^0.8.3"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.1"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Admin = "^1.5.8"
Flask-Login = "^0.5.0"
Flask-Migrate = "^3.1.0"
Flask-Security = "^3.0.0"
email-validator = "^1.1.3"
WTForms = "^2.3.3"
requests = "^2.26.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
